--- a/wakanda-horaire/laravel/package.json
+++ b/wakanda-horaire/laravel/package.json
@@ -30,6 +30,7 @@
         "@fullcalendar/vue3": "^5.11.1",
         "dayjs": "^1.11.2",
         "vue": "^3.2.33",
+        "vue-chevron": "^0.1.0",
         "vue-template-compiler": "^2.6.11"
     }
 }
